styling and updateing

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,3 +5,13 @@ $black:#111111;
 
 $error:#ff4655;
 $success:#2fffcf;
+
+
+@keyframes spinner{
+		from{
+			transform: rotateX(0deg);
+		}
+		to{
+			transform: rotateX(360px);
+		}
+	}
