--- a/src/style.scss
+++ b/src/style.scss
@@ -9,9 +9,46 @@ $success:#2fffcf;
 
 @keyframes spinner{
 		from{
-			transform: rotateX(0deg);
+			transform: rotate(0deg);
+			transform: scale(0.8);
 		}
 		to{
-			transform: rotateX(360px);
+			transform: rotate(360deg);
+			transform: scale(1.1);
+
 		}
 	}
+
+@keyframes shake-bottom {
+  0%,
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    -webkit-transform-origin: 50% 100%;
+            transform-origin: 50% 100%;
+  }
+  10% {
+    -webkit-transform: rotate(2deg);
+            transform: rotate(2deg);
+  }
+  20%,
+  40%,
+  60% {
+    -webkit-transform: rotate(-4deg);
+            transform: rotate(-4deg);
+  }
+  30%,
+  50%,
+  70% {
+    -webkit-transform: rotate(4deg);
+            transform: rotate(4deg);
+  }
+  80% {
+    -webkit-transform: rotate(-2deg);
+            transform: rotate(-2deg);
+  }
+  90% {
+    -webkit-transform: rotate(2deg);
+            transform: rotate(2deg);
+  }
+}
