--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,5 @@
 @import "animations.scss";
-$primrary:#f9f9f9;
+$primary:#f9f9f9;
 $secondary:#ece8e1;
 $background:hsl(210, 40%, 10%);
 $black:#111111;
